[tool.poetry]
name = "flask-stripe"
version = "0.1.0"
description = ""
authors = ["simon.islam <simon.islam@brilliant.com.bd>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
stripe = "^5.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
